# org-cli

./: .gitignore  .org-cli.json  .org-cli.yaml  AGENTS.md  Makefile  README.md  VIBES.md  VIBES.org  opencode.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
.github/workflows/: check.yml
docs/: agenda_command.md  board_command.md  flow_board_command.md  index.md  query_command.md  query_language.md  stats_all_command.md  stats_groups_command.md  stats_summary_command.md  stats_tags_command.md  stats_tasks_command.md  tasks_add_command.md  tasks_archive_command.md  tasks_board_command.md  tasks_capture_command.md  tasks_create_command.md  tasks_delete_command.md  tasks_edit_command.md  tasks_find_command.md  tasks_list_command.md  tasks_query_command.md  tasks_remove_command.md  tasks_update_command.md
examples/: ARCHIVE_small  exclude_example.txt  mapping_example.json
plans/: agenda-interactive-actions.md  config-stateless-refactor.md  interactive-loop-refactor.md  orgparse-to-org-parser.md  query-language.md  query-language1.md  textual-migration.md
plans/rejected/: query-language.md
src/: cli.py  core.py  main.py
src/org/: __init__.py  __main__.py  analyze.py  cli.py  cli_common.py  color.py  config.py  filters.py  histogram.py  logging.py  logging_config.py  order.py  output_format.py  parse.py  plot.py  text_utils.py  timestamp.py  tui.py  validation.py
src/org/commands/: agenda.py  archive.py  board.py  editor.py  interactive_action_builders.py  interactive_actions.py  interactive_common.py  query.py  runtime.py
src/org/commands/agenda/: __init__.py  actions.py  app.py  command.py  events.py  ui.py  (+2 more)
src/org/config/: __init__.py  app.py  cli.py
src/org/db/: __init__.py  errors.py  format.py  repository.py
src/org/logic/: __init__.py  archive.py  edit.py  filtering.py  search.py  stats.py  tasks.py  time.py  validation.py
src/org/pipeline/: load.py  query.py
src/org/query/: __init__.py  runner.py
src/org/query_language/: __init__.py  ast.py  compiler.py  errors.py  parser.py  runtime.py
src/org/serde/: __init__.py  format.py  parse.py
src/org/tui/: __init__.py  app.py  bits.py  color.py  footer.py  header.py  help.py  histogram.py  plot.py  prompt.py  selection.py
src/orgstats/: __init__.py  __main__.py  analyze.py  cli.py  core.py  filters.py
stubs/parsy/: __init__.pyi
tests/: __init__.py  conftest.py  test_analysis_result.py  test_analyze.py  test_analyze_multiple_done_keys.py  test_chart_date_spanning.py  test_clean.py  test_cli.py  test_cli_argparse.py  test_cli_buckets.py  test_cli_color.py  test_cli_config.py  test_cli_direct.py  test_cli_file_errors.py  test_cli_filter_construction.py  test_cli_mapping.py  test_cli_max_groups.py  test_cli_max_tags.py  test_cli_new_filters.py  test_cli_regex_filters.py  test_cli_relations.py  test_cli_validation_errors.py  test_combine_time_ranges.py  test_compute_category_histogram.py  test_compute_day_of_week_histogram.py  test_compute_frequencies.py  test_compute_global_timerange.py  test_compute_groups.py  test_compute_helpers.py  test_compute_relations.py  test_compute_task_state_histogram.py  test_compute_task_stats.py  test_compute_time_ranges.py  test_extract_timestamp.py  test_filter_category.py  test_filter_chain.py  test_filter_functions.py  test_filter_nodes.py  test_filtered_org_node.py  test_frequency.py  (+26 more)
tests/cli/: test_cli_main.py  test_cli_runner.py  test_cli_smoke.py  test_module_entrypoint.py
tests/cli_common/: test_cli_common_helpers.py  test_file_errors.py  test_filter_construction.py  test_top_tasks.py  test_validation.py
tests/color/: test_color.py
tests/commands/: test_agenda_app.py  test_agenda_command.py  test_board.py  test_board_app.py  test_interactive_common.py  test_query_command.py  test_runtime.py  test_tasks_capture_command.py  test_tasks_query_command.py
tests/commands/flow/: test_flow_board.py
tests/commands/stats/: test_stats_commands.py
tests/commands/tasks/: test_tasks_add.py  test_tasks_archive.py  test_tasks_board.py  test_tasks_capture_app.py  test_tasks_create.py  test_tasks_delete.py  test_tasks_edit.py  test_tasks_find.py  test_tasks_list.py  test_tasks_list_app.py  test_tasks_remove.py  test_tasks_update.py
tests/config/: test_config_core.py
tests/fixtures/: agenda_sample.org  custom_mapping.json  custom_states.org  invalid_mapping.json
tests/tui/: test_tui_display.py
(+54 files in other folders)
