[project]
name = "org-cli"
version = "0.1.0"
description = "Analyze Emacs Org-mode archive files for task statistics"
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
packages = [{ include = "org", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
org-parser = "^0.26.2"
typer = "^0.24.1"
rich = "^14.3.3"
parsy = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"
mypy = "^1.18.1"
taskipy = "^1.14.1"
pyright = "^1.1.408"

[tool.poetry.scripts]
org = "org.cli:main"

[tool.taskipy.tasks]
test = "pytest --cov=src/org/ --cov-report=term-missing"
lint = "ruff check src/ tests/"
lint-fix = "ruff check --fix src/ tests/"
format-check = "ruff format --check src/ tests/"
format = "ruff format src/ tests/"
type = "mypy src/org tests"
check = "task format-check && task lint && task type && task test"

[tool.ruff]
# Line length matching AGENTS.md guidelines
line-length = 100
target-version = "py314"

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    "dev",
    ".pytest_cache",
    "htmlcov",
    ".agent-shell",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # incompatible with D211; keep disabled to avoid conflicts
    "D205",    # allow compact one-line docstring summaries
    "D213",    # incompatible with D212; keep disabled to avoid conflicts
    "D413",    # allow no blank line after final docstring section
    "DTZ001",  # existing naive datetime construction retained for now
    "EM101",   # existing exception messages may use raw string literals
    "EM102",   # existing exception messages may use f-strings
    "FBT001",  # boolean positional args in signatures are accepted in current APIs
    "FBT003",  # boolean positional values in calls are accepted in current APIs
    "FIX001",  # allow FIXME notes in code while work is in progress
    "PLR2004", # magic value comparisons (ok for simple constants)
    "TD001",   # TODO metadata format is not enforced
    "TD002",   # TODO metadata format is not enforced
    "TD003",   # TODO metadata format is not enforced
    "TD004",   # TODO metadata format is not enforced
    "TRY003",  # postpone exception-message refactor (explicitly deferred)
]

[tool.ruff.lint.isort]
# Import sorting configuration
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
# Tests can be more lenient
"tests/**/*.py" = [
    "D403",    # preserve existing lower-case docstring wording in tests
    "INP001",  # namespace-package requirement is not enforced in this repo layout
    "PT006",   # current pytest parametrize style is accepted in tests
    "PT018",   # allow composite asserts in tests for readability
    "PTH118",  # os.path.join is fine in tests
    "PTH120",  # os.path.dirname is fine in tests
    "PTH123",  # open() is fine for CLI arg processing
    "PLC0415", # imports don't need to be at top level in tests
    "PLW1510", # subprocess.run check argument not critical in tests
    "RUF059",  # unused unpacked variables are ok in tests
    "S101",    # plain assert is idiomatic in pytest tests
    "S603",    # subprocess calls in tests are controlled by test fixtures
    "SLF001",  # private member access is tolerated in tests/support code
]

"src/org/output_format.py" = [
    "S603",    # pandoc subprocess invocation is an intentional feature
    "S112",    # best-effort serialization intentionally skips unreadable attributes
]

[tool.ruff.format]
# Use double quotes (matching AGENTS.md guidelines)
quote-style = "double"
indent-style = "space"
line-ending = "auto"
# Respect magic trailing commas so formatter inserts/splits accordingly.
skip-magic-trailing-comma = false

[tool.mypy]
# Strict mode configuration
python_version = "3.14"
mypy_path = "stubs"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
